<resources>
    <string name="app_name">SNL</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">login</string>
    <string name="login_etWelcome">Welcome to SNL chat app</string>
    <string name="Register_etNickname">Nickname</string>
    <string name="register_btnRegister">Register</string>
    <string name="login_etConfirm">Confirm password</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_btnGoToRegister">here</string>
    <string name="register_btnGoToLogin">here</string>
    <string name="settings_btnChangePort">Change PORT</string>
    <string name="settings_btnChangeColor">change background color</string>
    <string name="settings_tvHeader">Settings</string>
    <string name="login_no_account">Don\'t have an account? register</string>
    <string name="chat_string">Chats</string>
    <string name="BaseUrl">http://10.0.2.2:7290/api/</string>
    <string name="tvNewContact">Add New Contact</string>
    <string name="tvEntrUsr">Enter Username</string>
    <string name="tvEntrDisName">Enter Nickname</string>
    <string name="tvEntrSrvr">Enter Server</string>
    <string name="add_now">Add Now</string>
    <string name="contact_img">Contact Img</string>
    <string name="cant_reach">Can\'t reach server</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_btnSettings">login_btnSettings</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change theme</string>
    <string name="change_server">Change server</string>
</resources>