<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="10dp"
    tools:context=".userView.AddContact">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="318dp"
        android:layout_height="353dp"
        android:background="@drawable/round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <TextView
            android:id="@+id/tvAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNewContact"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddContact"
            app:layout_constraintVertical_bias="0.25">

            <EditText
                android:id="@+id/etAddContactUsr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/tvEntrUsr"
                android:ems="10"
                android:hint="@string/tvEntrUsr"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAddContactNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/tvEntrDisName"
                android:ems="10"
                android:hint="@string/tvEntrDisName"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddContactUsr"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/etAddContactSrvr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/tvEntrSrvr"
                android:ems="10"
                android:hint="@string/tvEntrSrvr"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddContactNick" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>